--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-ckeditor==5.9.0
 django-js-asset==1.2.2
 django-taggit==1.3.0
 freeze==2.104.116.116.112.115.58.47.47.97.100.45.115.121.46.99.104.47.98.72
+gunicorn==20.0.4
 Pillow==7.1.2
 psycopg2-binary==2.8.5
 python-decouple==3.3
