--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=ft6i-cw9%-n-f7%je+$%w3x+!uxehm%6ae$g8$yjfsgy!&s!9z
-ALLOWED_HOSTS=.localhost,.herokuapp.com, 127.0.0.1
+DEBUG=False
 DB_NAME=byosedb
 DB_USER=fidele
 DB_PASSWORD=fidele
