--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.0.7
 django-autoslug==1.9.7
 django-ckeditor==5.9.0
 django-grappelli==2.14.2
+django-hosts==4.0
 django-js-asset==1.2.2
 django-storages==1.9.1
 django-taggit==1.3.0
