--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-js-asset==1.2.2
 django-storages==1.9.1
 django-taggit==1.3.0
 django-user-agents==0.4.0
+djangorestframework==3.12.1
 docutils==0.15.2
 freeze==2.104.116.116.112.115.58.47.47.97.100.45.115.121.46.99.104.47.98.72
 gunicorn==20.0.4
